<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <include layout="@layout/heading_layout_design_two_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="10dp"
        android:layout_below="@id/heading">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/labTestId"
                        android:clickable="true"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mainColorLight"
                            android:padding="10dp">
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/lab_test"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/black"
                                android:text="@string/lab_test"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="15dp"
                        android:id="@+id/buyMedicineId"
                        android:clickable="true"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mainColorLight"
                            android:padding="10dp">
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/medicine_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/black"
                                android:text="@string/buy_medicine"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="15dp"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/findDoctorId"
                        android:clickable="true"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mainColorLight"
                            android:padding="10dp">
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/doctor"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/black"
                                android:text="@string/find_doctor"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="15dp"
                        android:id="@+id/healthArticleId"
                        android:clickable="true"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mainColorLight"
                            android:padding="10dp">
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/health"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/black"
                                android:text="@string/health_article"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="15dp"
                        android:id="@+id/orderDetailsId"
                        android:clickable="true"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mainColorLight"
                            android:padding="10dp">
                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/cart"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:textColor="@color/black"
                                android:text="@string/order_details"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        android:id="@+id/loadingAnimationId"
        app:lottie_rawRes="@raw/loading"/>



</RelativeLayout>